@@ -1,7 +1,9 @@
 package com.tfg.futstats.models;
 
+// region imports
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Arrays;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import java.sql.Blob;
@@ -17,17 +19,22 @@ import jakarta.persistence.JoinColumn;
 import jakarta.persistence.JoinTable;
 import jakarta.persistence.Lob;
 import jakarta.persistence.ManyToMany;
+//endregion
 
 @Entity
 public class User {
 
+    // region Attributes
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO) // Auto generated ID
     private Long id;
 
     // User attributes
-    @Column(unique = true)
+    @Column(unique = true, nullable = false)
     private String name;
+
+    @Column(unique = true, nullable = false)
+    private String email;
 
     private String password;
 
@@ -36,55 +43,60 @@ public class User {
     // Realtions with other models in DB
     @JsonIgnore
     @ManyToMany(cascade = CascadeType.ALL)
-    @JoinTable(name = "user_leagues",
-            joinColumns = @JoinColumn(name = "user_id"),
-            inverseJoinColumns = @JoinColumn(name = "league_id"))
+    @JoinTable(name = "user_leagues", joinColumns = @JoinColumn(name = "user_id"), inverseJoinColumns = @JoinColumn(name = "league_id"))
     private List<League> belongedLeagues;
 
     @JsonIgnore
     @ManyToMany(cascade = CascadeType.ALL)
-    @JoinTable(name = "user_teams",
-            joinColumns = @JoinColumn(name = "user_id"),
-            inverseJoinColumns = @JoinColumn(name = "team_id"))
+    @JoinTable(name = "user_teams", joinColumns = @JoinColumn(name = "user_id"), inverseJoinColumns = @JoinColumn(name = "team_id"))
     private List<Team> belongedTeams;
 
     @JsonIgnore
     @ManyToMany(cascade = CascadeType.ALL)
-    @JoinTable(name = "user_players",
-            joinColumns = @JoinColumn(name = "user_id"),
-            inverseJoinColumns = @JoinColumn(name = "player_id"))
+    @JoinTable(name = "user_players", joinColumns = @JoinColumn(name = "user_id"), inverseJoinColumns = @JoinColumn(name = "player_id"))
     private List<Player> belongedPlayers;
 
     @Lob
-	@JsonIgnore
-	private Blob imageFile;
+    @JsonIgnore
+    private Blob imageFile;
 
-	private boolean image;
+    private boolean image;
+    // endregion
 
-    // Constructors
+    // region Constructors
 
-    public User() {}
-
-    public User(String name, String password, Blob imageFile, boolean image, String... roles) {
-        this.name = name;
-        this.password = password;
+    public User() {
         this.belongedLeagues = new ArrayList<>();
         this.belongedTeams = new ArrayList<>();
         this.belongedPlayers = new ArrayList<>();
-        this.roles = List.of(roles);
+    }
+
+    public User(String name, String password, String email, Blob imageFile, boolean image, String... roles) {
+        this.name = name;
+        this.password = password;
+        this.email = email;
+        this.belongedLeagues = new ArrayList<>();
+        this.belongedTeams = new ArrayList<>();
+        this.belongedPlayers = new ArrayList<>();
+        this.roles = new ArrayList<>(Arrays.asList(roles));
         this.image = image;
         this.imageFile = imageFile;
+        this.belongedLeagues = new ArrayList<>();
+        this.belongedTeams = new ArrayList<>();
+        this.belongedPlayers = new ArrayList<>();
     }
 
     public User(UserDTO user) {
+        this.id = user.getId();
         this.name = user.getName();
         this.password = user.getPassword();
+        this.email = user.getEmail();
         this.roles = user.getRoles();
         this.image = user.getImage();
     }
+    // endregion
 
-    // Getters & Setters
-
+    // region Getters & Setters
     public long getId() {
         return this.id;
     }
@@ -101,6 +113,14 @@ public class User {
         this.name = name;
     }
 
+    public String getEmail() {
+        return email;
+    }
+
+    public void setEmail(String email) {
+        this.email = email;
+    }
+
     // ------------------------------------ LEAGUE
     // -------------------------------------
     public List<League> getLeagues() {
@@ -115,7 +135,7 @@ public class User {
         this.belongedLeagues = newLeagues;
     }
 
-    public void removeLeague(League league){
+    public void removeLeague(League league) {
         this.belongedLeagues.remove(league);
     }
 
@@ -133,7 +153,7 @@ public class User {
         this.belongedTeams = newTeams;
     }
 
-    public void removeTeam(Team team){
+    public void removeTeam(Team team) {
         this.belongedTeams.remove(team);
     }
 
@@ -151,7 +171,7 @@ public class User {
         this.belongedPlayers = newPlayers;
     }
 
-    public void removePlayer(Player player){
+    public void removePlayer(Player player) {
         this.belongedPlayers.remove(player);
     }
 
@@ -164,8 +184,7 @@ public class User {
         this.password = password;
     }
 
-    public void setRoles(String role)
-    {
+    public void setRoles(String role) {
         this.roles.add(role);
     }
 
@@ -179,18 +198,19 @@ public class User {
     }
 
     public Blob getImageFile() {
-		return imageFile;
-	}
+        return imageFile;
+    }
 
-	public void setImageFile(Blob image) {
-		this.imageFile = image;
-	}
+    public void setImageFile(Blob image) {
+        this.imageFile = image;
+    }
 
-	public boolean getImage() {
-		return this.image;
-	}
+    public boolean getImage() {
+        return this.image;
+    }
 
-	public void setImage(boolean image) {
-		this.image = image;
-	}
+    public void setImage(boolean image) {
+        this.image = image;
+    }
+    // endregion
 }
